# MiniGameWorld

./: .gitignore  LICENSE.txt  MiniGameWorld.slnx  README.md
CitizenDB/: CMakeLists.txt  main.c
CitizenDB/inc/: AppState.h  Commands.h  Common.h  LinkedList.h  Person.h
CitizenDB/inc/UI/: Ansi.h  Screens.h
CitizenDB/src/: AppState.c  Commands.c  Common.c  LinkdedList.c  Person.c
CitizenDB/src/UI/: Screens.c
HigherLower/: CMakeLists.txt  main.c
HigherLower/inc/: Game.h  Values.h
MotoGP/: CMakeLists.txt  main.c
MotoGP/inc/: Common.h  Debug.h  DriverInfo.h  GameSession.h  Scoreboard.h  TeamInfo.h  TrackInfo.h
MotoGP/inc/UI/: Ansi.h  AppMenus.h  ConsoleMenu.h  Screens.h
MotoGP/src/: Common.c  ConsoleMenu.c  DriverInfo.c  GameSession.c
MotoGP/src/UI/: AppMenus.c  Screens.c
RallyDakar/: CMakeLists.txt  README.md  TODO.md  main.c
RallyDakar/inc/: Ansi.h  Common.h  Debug.h  GameSession.h  Stage.h  StageResult.h  TeamInfo.h  TerrainType.h  Timespan.h  VehicleHealth.h  VehicleInfo.h
RallyDakar/inc/UI/: AppMenus.h  ConsoleMenu.h  MenuActions.h  Screens.h
RallyDakar/src/: AppMenus.c  Common.c  ConsoleMenu.c  Debug.c  GameSession.c  Screens.c  Stage.c  TeamInfo.c  Timespan.c  VehicleInfo.c
Shared/: Ansi.h
Shared/inc/: Common.h  LinkedList.h
Shared/src/: Common.c  LinkdedList.c
Shared/src/UI/: ConsoleMenu.c
StockTrader/: CMakeLists.txt  Source.c  StockTrader.vcxproj  StockTrader.vcxproj.filters
StockTrader/inc/: Ansi.h  GameSession.h  UIActions.h  Values.h
StockTrader/inc/data/: GlobalData.h  Player.h  Stock.h
